[gd_scene format=3 uid="uid://result-overlay"]

[ext_resource path="res://scripts/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=2]

[node name="ResultOverlay" type="Control"]
script = ExtResource( 1 )
anchors_preset = 15
visible = false
mouse_filter = 1

[node name="Backdrop" type="ColorRect" parent="ResultOverlay"]
anchors_preset = 15
color = Color(0, 0, 0, 0.65)

[node name="Content" type="Panel" parent="ResultOverlay"]
anchors_preset = 5
margin_left = 180
margin_right = -180
margin_top = 420
margin_bottom = -420

theme = null

[node name="VBox" type="VBoxContainer" parent="Content"]
anchors_preset = 15
margin_left = 20
margin_top = 20
margin_right = -20
margin_bottom = -20
separation = 12

[node name="StatusLabel" type="Label" parent="VBox"]
text = "Victory!"
align = 1

[node name="DetailLabel" type="Label" parent="VBox"]
align = 1
text = "You matched every pair"

[node name="StatsLabel" type="Label" parent="VBox"]
align = 1
text = "Score: 0\nMoves: 0\nTime: 0s"

[node name="Buttons" type="HBoxContainer" parent="VBox"]
alignment = 1
separation = 12

[node name="PlayAgain" type="Button" parent="Buttons"]
script = ExtResource( 2 )
text = "Play Again"

[node name="Menu" type="Button" parent="Buttons"]
script = ExtResource( 2 )
text = "Main Menu"

[connection signal="pressed" from="PlayAgain" to="." method="_on_replay"]
[connection signal="pressed" from="Menu" to="." method="_on_menu"]
